fix: text overflow

--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@ body {
     font-family: 'Noto Serif', serif;
     color: #e1e1e1;
     background-color: #000;
-    height: 100%;
+    min-height: 100%;
     margin: 0;
-    padding: 20px;
+    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,6 +13,10 @@ body {
 
 .container {
     max-width: 700px;
+    width: calc(100% - 40px);
+    margin: 20px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 h1 {
